# open-streaming-platform

./: .dockerignore  .env  .env.dist  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ATTRIBUTION  AUTHORS  CHANGELOG  CONTRIBUTING.md  Dockerfile  README.md  apiv1.py  app.py  build-docker-directory.sh  celerybeat-schedule  celeryworker.py  dbUpgrade.sh  docker-compose.yml  manage.py  osp-config.sh  pyproject.toml  requirements.txt  setup-nginx-rtmp-server.sh  setup-osp.sh  supervisord.conf  version
blueprints/: apiv1.py  channels.py  clip.py  errorhandler.py  liveview.py  m3u8.py  oauth.py  play.py  profile.py  root.py  rtmp.py  settings.py  streamers.py  template.py  topics.py  upload.py
classes/: Channel.py  RecordedVideo.py  Sec.py  Stream.py  apikey.py  banList.py  comments.py  dbVersion.py  hub.py  hubConnection.py  invites.py  logs.py  notifications.py  panel.py  settings.py  shared.py  stickers.py  subscription.py  subscriptions.py  topics.py  upvotes.py  views.py  webhook.py
conf/: config.py.dist  osp-edge.conf
docs/: conf.py  index.rst
flask-nginx-rtmp-mgmt/: Dockerfile  __init__.py  apiv1.py  app.py  config.py  config.py.dist  manage.py  migrate.py  model.py  version
functions/: apiFunc.py  boshclient.py  cache.py  cachedDbCalls.py  celeryFunc.py  channelFunc.py  commentsFunc.py  database.py  ejabberdctl.py  hub.py  notifications.py  oauth.py  rtmpFunc.py  scheduledTasks.py  securityFunc.py  subsFunc.py  system.py  templateFilters.py  test.py  themes.py  topicsFunc.py  videoFunc.py  votes.py  webhookFunc.py  xmpp.py
globals/: globalvars.py
(+425 files in other folders)
